<resources>
    <string name="app_name">Fii erou!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">Delogheaza-te</string>
    <string name="donateText">Vreau sa donez</string>
    <string name="loginText">Logheaza-te</string>
    <string name="createAccountText">Creeaza cont</string>
    <string name="informationText">Informatii utile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="register_name">Nume</string>
    <string name="register_age">Varsta</string>
    <string name="register_username">Utilizator</string>
    <string name="register_pass">Parola</string>
    <string name="register_register">Inregistreaza-te</string>
    <string name="login_username">Utilizator</string>
    <string name="login_pass">Parola</string>
    <string name="login_login">Logheaza-te</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "De ce să donez sânge?\n\n\n"

        "Unul din zece pacienți care ajung la spitalele din România are nevoie de sânge sau de "
        "produse derivate din sânge." "Statistic, fiecare om de pe planetă are nevoie pe parcursul "
        "vieții cel puțin o singură dată de sânge." "Statistic, România este pe ultimele locuri în "
        "ce privește donarea benevolă de sânge, iar multe intervenții chirurgicale din țară sunt"
        "amânate. \n\n"
        "Creșterea cantității de sânge în unitățile spitalicești din România scade numărul de "
        "abuzuri și cazuri de corupție bazate pe traficul de sânge. \n\n"
        "14 iunie este ZIUA INTERNAȚIONALĂ A DONATORULUI DE SÂNGE, prin decizie ONU. \n\n"

        "Ce să fac înainte de a dona sânge? \n\n"

        "1. Este recomandabil să iei o gustare înainte de a dona;"\n
        "2. Micul dejun poate fi bogat în lichide și glucide (ceai sau cafea dulce, sandwitch,"
        "pâine cu dulceață).""Înainte de donare, se evită mesele copioase,cu grăsimi și băuturi"
        "alcoolice;"\n
        "3. Nu ai voie să consumi alcool cu 24 de ore înainte de a dona sânge;" \n
        "4. Nu ai voie să fumezi înainte și după ce ai donat sânge; \n"
        "5. De asemenea, vino să donezi odihnit, nu după o noapte pierdută la serviciu, în cluburi"
        "sau la calculator.\n\n"

        "Ce condiții trebuie să îndeplinesc pentru a dona sânge?\n\n"

        "Donatorul de sânge este orice cetățean român cu domiciliul în România sau orice cetățean"
        "al UE care are reședința în România, este sănătos și se supune regulilor de prelevare a"
        "sângelui. Alte condiții, conform Centrului de Transfuzii Sanguine București, România:"\n
        "- vârsta cuprinsă între 18-60 ani;"\n
        "- greutate peste 50 Kg;"\n
        "- puls regulat, 60 -100 bătăi/ minut;"\n
        "- tensiune arterială sistolică între 100 și 180 mmHg;"\n
        "- să nu fi suferit în ultimele 6 luni intervenții chirurgicale;"\n
        "- femeile să nu fie: însarcinate, în perioada de lăuzie, în perioada menstruală;"\n
        "- să nu fi consumat grăsimi sau băuturi alcoolice cu cel puțin 48 de ore înaintea donării;"
        \n
        "- să nu fii sub tratament pentru diferite afecțiuni: hipertensiune, boli de inimă, boli"
        "renale, boli psihice, boli hepatice, boli endocrine; \n\n"

        "Câte grupe de sânge există? \n\n"


        "Există 4 grupe de sânge și nu toate sunt compatibile între ele: A, B, AB, 0 (zero)."
        " Cu cât grupa de sânge este mai comună, cu atât cererea este mai mare. Cele mai frecvente "
        "grupe de" "sânge sunt 0 și A. Mai puțin frecventă este grupa B, iar AB este și mai rară."
        "Fiecare grupă din cele 4 au și RH Negativ. Grupele cu Rh Negativ sunt extrem de greu de "
        "gestionat din cauza faptului că sunt rare la nivelul populației, în general. Se întâmplă,"
        "deseori," "ca solicitările făcute de spitale să nu poata fi satisfăcute în timp util. \n\n"

        "Câte vieți pot salva dacă donez sânge?\n\n"

        "Dacă sângele tău este sănătos, poți să salvezi chiar și trei vieți, pentru că în "
        "laboratoare, specialiștii pot să separe următoarele:"\n
        "– celule roșii (se folosesc mai ales la intervenții chirurgicale și sunt ‘bune’ până la 35"
        "de zile de la recoltare); "\n
        "– trombocite (sunt ‘bune’ până la 5 zile de la recoltare și pot ajuta la tratamentul"
        "bolnavilor de cancer și leucemie);"\n
        "– plasmă (congelată, poate fi folosită până la 12 luni și este cel mai des utilizată; \n\n"


        "De ce este bine să donez? \n\n"

        "Donarea de sânge în România este voluntară și anonimă și este o ocazie foarte bună pentru "
        "donator" "să afle dacă este un individ sănătos. Identitatea donatorului și rezultatele "
        "testelor sunt secrete. Ele nu pot fi scoase din Centrul de Transfuzii fără acordul scris"
        "al donatorului." "De asemenea, în cazul unor probleme, nu se fac anchete epidemiologice "
        "fără acordul""donatorului. Donatorii sunt obligați să se informeze, după ce au donat sau "
        "la 75 de zile de la donare, asupra rezultatelor analizelor." "Fără acordul scris al donatorului"
        ", rezultatele analizelor nu ies din instituția în care acesta a donat sânge."
        "Cadrele medicale de la centrele de donare nu au voie sa comunice rezultatele analizelor"
        "prin fax, mail sau la telefon.\n\n"

        "Ce riscuri există în timpul procesului de donare?\n\n"


        "Pentru donator, nu există niciun risc. În laboratoare și în centrele de transfuzii, în "
        "procesul de recoltare,se utilizează doar ustensile și obiecte sanitare cu unică folosință."
        "Pentru primitor, riscurile sunt înlăturate pentru că fiecare cantitate de sânge recoltată "
        "este testată din toate punctele de vedere,iar dacă nu este conform, sângele este incinerat.
        \n\n"

    </string>
    <string name="title_activity_utils_info">Despre Donare!!</string>
    <string name="title_activity_donate">DonateActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_personal_data">Date personale</string>
    <string name="tab_health_name">Starea de sanatate</string>
    <string name="tab_history">Istoric</string>
    <string name="txtHistory">Istoric</string>
    <string name="txtPrisonResource">Ati fost in detentie(inchisoare) in ultimul an?</string>
    <string name="resYes">DA</string>
    <string name="txtDiseases">Ati fost expusi la hepatita(bolnavi in familie sau la munca?</string>
    <string name="resNo">NU</string>
    <string name="txtHardDiseases">Ati suferit de icter, boli cu transmitere sexuala, boli nervoase sau boli cronice?</string>
    <string name="txtFumat">Sunteti fumator?</string>
    <string name="txtAlcohol">Ati consumat recent alcool?</string>
    <string name="txtSendData">Trimite date</string>
    <string name="txtHealthState">Considerati ca aveti o stare buna de sanatate?</string>
    <string name="txtTratament">Urmati vreun tratament medicamentos?</string>
    <string name="txtSexualContact">In ultimul an ati avut contact sexual cu persoane bolnave?</string>
    <string name="txtDroguri">In ultimele 12 luni ati consumat droguri?</string>
    <string name="txtULastDonation">De la ultima donatie ati pierdut sange?</string>

    <string name="account_name">Nume</string>
    <string name="acc_username">Utilizator</string>
    <string name="acc_age">Varsta</string>
    <string name="acc_info_title">Informatii personale</string>
    <string name="title_activity_contacts">ContactsActivity</string>


    <string name="localAddress">Str. Nicolae Bălcescu, nr. 18, Cluj-Napoca</string>
    <string name="institutionName">Centrul de transfuzie sanguina</string>
    <string name="phoneNumber">0364 417640</string>
    <string name="email">doneaza@centruldetransfuzie.ro</string>
    <string name="history_time_description">Timpul ramas pana la urmatoarea donare</string>


</resources>
