<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.raulbuzila.beahero.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/donateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/donateText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/donateButton"
            android:layout_below="@+id/donateButton"
            android:layout_marginTop="11dp"
            android:text="@string/loginText" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/loginButton"
            android:layout_below="@+id/loginButton"
            android:layout_marginTop="16dp"
            android:text="@string/createAccountText" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="119dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            app:srcCompat="@mipmap/logo"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="30dp" />

        <Button
            android:id="@+id/informationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/createAccountButton"
            android:layout_below="@+id/createAccountButton"
            android:layout_marginTop="17dp"
            android:text="@string/informationText" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
