<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raulbuzila.beahero.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout2">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="470dp"
        tools:layout_editor_absoluteX="49dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignStart="@+id/etAge"
            android:layout_marginTop="26dp"
            android:text="@string/register_name"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="75dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/appCompatTextView2"
            android:layout_below="@+id/appCompatTextView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="94dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignStart="@+id/etAge"
            android:layout_below="@+id/etName"
            android:layout_marginTop="17dp"
            android:text="@string/register_age"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="157dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appCompatTextView3"
            android:layout_centerHorizontal="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="183dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="348dp"
            android:layout_height="26dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etAge"
            android:layout_marginTop="13dp"
            android:text="@string/register_username"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="253dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/appCompatTextView4"
            android:layout_below="@+id/appCompatTextView4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="279dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            android:layout_width="348dp"
            android:layout_height="16dp"
            android:layout_alignStart="@+id/etUsername"
            android:layout_below="@+id/etUsername"
            android:layout_marginTop="17dp"
            android:text="@string/register_pass"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="354dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/appCompatTextView5"
            android:layout_below="@+id/appCompatTextView5"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="370dp" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:text="@string/register_register"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="437dp" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="510dp" />


    </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>