<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raulbuzila.beahero.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_alignBottom="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername"
            android:layout_marginBottom="44dp"
            android:text="@string/login_username"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="97dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="121dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_alignStart="@+id/etUsername"
            android:layout_below="@+id/etUsername"
            android:layout_marginTop="29dp"
            android:text="@string/login_pass"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="201dp"
            android:id="@+id/appCompatTextView" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/appCompatTextView"
            android:layout_below="@+id/appCompatTextView"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="230dp" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:text="@string/login_login"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="292dp" />

        <TextView
            android:id="@+id/loginErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:text="TextView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="363dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>